<resources>
    <string name="app_name">Go!래처</string>
    <string name="sampleText">SAMPLE</string>
    <string name="supplierName">도연상회</string>
    <string name="supplierProduct">당근, 채소, 배추</string>
    <string name="item_profile_button">GO!</string>

    <!-- 도연 -->
    <!-- 공급처 샘플데이터 1-->
    <string name="supplier1_name">도연상회</string>
    <string name="supplier1_location">경기도 고양시 일산동구 장항동</string>
    <string name="supplier1_majorTarget">중식</string>
    <string name="activityChangeBtn">GO!</string>

    <string name="tos_topPanel">약관동의</string>
    <string name="tos1">사업자정보제공\n\n본 거래 예약 시스템은 해당 거래처에 사업자, 사업장 정보를 제공합니다.</string>
    <string name="tos2">거래약관\n\n실제 거래에 있어서 납품대금을 미지급하거나 공급처에 대한 무리한 요구는 지양해주시기 바라며 이와 같은 업체 부주의로 인해 발생하는 피해에 대해서는 당사에서 도와드릴 수 없습니다.</string>
    <string name="tosAgree">약관을 확인하였습니다.</string>

    <!-- 도연 끝 -->

    <!-- 수현 -->
    <string name="id">아이디</string>
    <string name="password">패스워드</string>
    <string name="passwordcheck">패스워드 확인</string>
    <string name="email">이메일</string>
    <string name="PhoneNum">휴대폰번호</string>
    <string name="Go">GO</string>

    <string name="findIP">아이디/비밀번호찾기</string>
    <string name="findID">아이디찾기</string>
    <string name="findPass">비밀번호 찾기</string>
    <string name="signUP">회원가입</string>
    <string name="login">LOGIN</string>
    <string name="repet">중복확인</string>
    <string name="verify">인증</string>

    <string name="agreeText">고래처(Go래처)는 회원가입, 문의 등을 위해 아래와 같이 개인정보를 수집하고 있습니다.\n1.수집항목\n-고객의 사용자의 생년월일, 휴대폰번호, 성명, 이메일 \n-연계정보, 중복가입확인정보\n-사용자가 이용하는 아이디 정보(구글, 네이버, 카카오)\n\n2.이용목적\n-고객이 Application 등에 입력한 본인확인정보의 정확성 여부 확인\n-해당 Application 등에 연계정보와 중복가입확인정보 전송\n-기타 법률에서 정한 목적\n\n3.개인정보의 보유 및 이용기간\n-사용자가 서비스를 이용하는 기간에 한하여 보유 및 이용을 원칙으로 하되, 법률에서 정하는 경우 해당 기간까지 보유 및 이용(세부사항은 "회사"의 개인정보처리방침에 따름)\n\n4.회원관리 및 서비스\n1) 구글, 네이버, 카카오를 통한 회원가입이 가능하며, 고래처(Go래처) 애플리케이션 자체에서 개인 이메일을 통해 회원가입이 가능합니다.\n2)공급업자(제품을 제공하는 자)는 외식업자로 부터 받은 거래 신청으로 납품이 가능합니다.\n3)외식업자(제품을 제공받는 자)는 공급자에게 원하는 품목에 대해 거래 신청이 가능하며, 이를 납품받을 수 있습니다.\n4)공급업자와 외식업자는 고래처(Go래처) Application을 통해 거래관리가 가능합니다.</string>

    <string name="supLogin">공급자\nLogin</string>
    <string name="resLogin">외식업자\nLogin</string>

    <string name="agreeone">약관에 동의합니다. (필수)</string>
    <string name="Agree">-정보제공에 대해 동의하시면 동의에 체크해주세요.\n 개인정보는 탈퇴로부터 같이 사라집니다. \n 동의하시지 않을 시에 가입이 어려워집니다.</string>

    <string name="giverStar">별점을 등록해주세요!\n\n별점은 더 나은 거래를 위한 앱이 됩니다.\n\n솔직한 별점을 주세요!\n\n단, 별점은 한 번만 가능합니다.</string>
    <string name="addStar">별 점 등 록</string>
    <string name="Intro_content">내용을 입력해주세요.(500자 이내)</string>
    <string name="Intro_depth">위치 \n 업종 \n \ --------------소개------------ </string>

    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="Intro">업체 소개</string>
    <string name="editInfo">정보수정</string>
    <string name="ItemName">상품명</string>
    <string name="Itemae">수량</string>
    <string name="Itemprice">단가</string>
    <string name="SupplyDate">공급일</string>
    <string name="requestDate">신청일</string>
    <string name="supplyName">공급자명</string>
    <string name="ingredient">음식재료</string>
    <string name="address">주소</string>
    <string name="star">별점\n주기</string>
    <string name="contact">연락처</string>
    <string name="TotalCoin">총 매출</string>

    <string name="yellBtn">수정요청</string>
    <string name="grayBtn">대기</string>
    <string name="redBtn">거절됨</string>
    <string name="greenBtn">거래진행중</string>
    <!--수현끝-->

    <!--카카오 로그인-->
    <string name="kakao_key">b309c471c54ebdb2d10c06b6c7a80bcc
    </string>

    <!--네이버 로그인인-->
    <string name="naver_client_id">uMzH56lm9EaQQmvV4jJm</string>
    <string name="naver_client_secret">c0mTBFEUDa</string>
    <string name="naver_client_name">고래처</string>

    <!--라인-->
    <string name="line">-----------------------------------</string>
</resources>
