<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:id="@+id/joinId"
        android:text="@string/id"
        android:layout_width="300dp"
        android:layout_height="50dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="20dp"/>

    <EditText
        android:id="@+id/joinPass"
        android:text="@string/password"
        android:layout_width="300dp"
        android:layout_height="50dp"
        app:layout_constraintTop_toBottomOf="@+id/joinId"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"/>

    <EditText
        android:id="@+id/joinEmail"
        android:text="@string/email"
        android:layout_width="300dp"
        android:layout_height="50dp"
        app:layout_constraintTop_toBottomOf="@+id/joinPass"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"/>


    <EditText
        android:id="@+id/joinNum"
        android:text="@string/PhoneNum"
        android:layout_width="300dp"
        android:layout_height="50dp"
        app:layout_constraintTop_toBottomOf="@+id/joinEmail"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"/>

    <TextView
        android:id="@+id/joinAgree"
        android:text="약관동의"
        android:textSize="18sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/joinNum"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="50dp"/>

    <TextView
        android:id="@+id/joinAgreetext"
        android:text="@string/Agree"
        android:layout_width="400dp"
        android:layout_height="200dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/joinAgree"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="20dp" />

    <CheckBox
        android:id="@+id/checkAgree"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/joinAgreetext"
        android:layout_marginLeft="50dp"/>

    <Button
        android:id="@+id/goBtn"
        android:text="@string/Go"
        android:textSize="20sp"
        android:layout_width="100dp"
        android:layout_height="50dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/checkAgree"
        android:layout_marginTop="30dp"/>


</androidx.constraintlayout.widget.ConstraintLayout>