<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/findID"
        android:text="@string/findID"
        android:textSize="20sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>

    <EditText
        android:id="@+id/findemail"
        android:text="이메일"
        android:layout_width="300dp"
        android:layout_height="50dp"
        app:layout_constraintTop_toBottomOf="@+id/findID"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="50dp"/>

    <Button
        android:id="@+id/emailGo"
        android:text="@string/Go"
        android:layout_width="100dp"
        android:layout_height="50dp"
        app:layout_constraintTop_toBottomOf="@+id/findemail"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="20dp"/>

    <TextView
        android:id="@+id/findPass"
        android:text="@string/findPass"
        android:textSize="20sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/emailGo"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="100dp"/>

    <EditText
        android:id="@+id/findIdEdit"
        android:text="@string/id"
        android:layout_width="300dp"
        android:layout_height="50dp"
        app:layout_constraintTop_toBottomOf="@+id/findPass"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="50dp"/>

    <EditText
        android:id="@+id/findemailEdit"
        android:text="@string/email"
        android:layout_width="300dp"
        android:layout_height="50dp"
        app:layout_constraintTop_toBottomOf="@+id/findIdEdit"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="50dp"/>

    <Button
        android:id="@+id/emailGo2"
        android:text="@string/Go"
        android:layout_width="100dp"
        android:layout_height="50dp"
        app:layout_constraintTop_toBottomOf="@+id/findemailEdit"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="20dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>