<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/item_profile_height">

        <ImageView
            android:src="@drawable/ic_person_black_24dp"
            android:layout_width="50dp"
            android:layout_height="match_parent"
            app:layout_constraintLeft_toLeftOf="parent"/>

        <LinearLayout
            android:gravity="center"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:textSize="30sp"
                android:text="@string/supplierName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <TextView
                android:id="@+id/supplierProduct"
                android:text="@string/supplierProduct"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>


        </LinearLayout>

        <Button
            android:text="@string/item_profile_button"
            android:layout_width="@dimen/item_profile_contentsWidth"
            android:layout_height="match_parent"
            app:layout_constraintRight_toRightOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>


</LinearLayout>