<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:orientation="horizontal"
        android:padding="5dp">

        <LinearLayout
            android:layout_width="70dp"
            android:layout_height="100dp"
            android:layout_gravity="left"
            android:layout_weight="1"
            android:padding="5dp">
            <ImageView
                android:id="@+id/reqItemImg"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:src="@drawable/nullitem"
                android:layout_margin="10dp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="250dp"
            android:layout_height="100dp"
            android:layout_gravity="top"
            android:layout_weight="1"
            android:orientation="vertical">
            <TextView
                android:id="@+id/reqItemName"
                android:text="@string/supplyName"
                android:textSize="13sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginLeft="20dp"/>

            <TextView
                android:id="@+id/reqItemAE"
                android:text="@string/Itemae"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="13sp"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="5dp"/>

            <TextView
                android:id="@+id/reqItemPrice"
                android:text="@string/Itemprice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="13sp"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="5dp"/>

            <TextView
                android:id="@+id/reqItemDate"
                android:text="@string/SupplyDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="13sp"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="5dp"/>

        </LinearLayout>
    </LinearLayout>

</LinearLayout>