<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:orientation="horizontal"
        android:padding="5dp">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="70dp"
            android:layout_gravity="left"
            android:layout_weight="1"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/goraeItemImg"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_margin="10dp"
                android:src="@drawable/nullitem" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="70dp"
            android:layout_weight="2"
            android:orientation="vertical">

            <TextView
                android:id="@+id/goraeItemSupply"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:text="@string/supplyName"
                android:textColor="@color/darkGreen"
                android:textSize="10sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/goraeItemContact"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:text="@string/contact"
                android:textColor="@color/black"
                android:textSize="13sp" />

            <TextView
                android:id="@+id/goraeItemTotal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:text="@string/TotalCoin"
                android:textSize="13sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="70dp"
            android:layout_weight="1">

            <Button
                android:id="@+id/giveStar"
                android:layout_width="50dp"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:background="@color/yellow"
                android:text="@string/star"
                android:textSize="13sp"
                android:textColor="@color/darkbrown" />
        </LinearLayout>

    </LinearLayout>

</LinearLayout>