<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/accessTerms"
        android:text="[개인정보수집 및 이용약관]"
        android:textStyle="bold"
        android:textSize="20sp"
        android:textColor="@color/darkGreen"
        android:layout_width="240dp"
        android:layout_height="30dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="5dp"/>

    <TextView
        android:id="@+id/accessText"
        android:layout_width="fill_parent"
        android:text="@string/agreeText"
        android:layout_height="450dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/accessTerms"
        android:layout_marginTop="5dp"/>

    <TextView
        android:id="@+id/joinAgreetext"
        android:text="@string/Agree"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:textSize="15sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/accessText"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="5dp"/>

    <Button
        android:id="@+id/accessOK"
        android:text="@string/Go"
        android:fontFamily="@font/maplestorybold"
        android:textSize="20sp"
        android:textColor="@color/darkbrown"
        android:layout_width="100dp"
        android:layout_height="35dp"
        android:background="@drawable/radius"
        app:layout_constraintTop_toBottomOf="@id/joinAgreetext"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="5dp"/>
</androidx.constraintlayout.widget.ConstraintLayout>