<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/top_NameDate"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/nowproImg"
            android:layout_width="100dp"
            android:layout_height="70dp"
            android:src="@drawable/null_pro"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"/>

        <TextView
            android:id="@+id/nowName"
            android:text="가게명"
            android:textSize="22sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toRightOf="@+id/nowproImg"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"/>

        <TextView
            android:id="@+id/nowDate"
            android:text="@string/requestDate"
            android:textSize="22sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toRightOf="@+id/nowproImg"
            app:layout_constraintTop_toBottomOf="@+id/nowName"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/itemContent"
        android:layout_width="match_parent"
        android:layout_height="175dp"
        app:layout_constraintTop_toBottomOf="@+id/top_NameDate">

        <ImageView
            android:id="@+id/nowItemImg"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:src="@drawable/null_item"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_margin="20dp"/>
        <TextView
            android:id="@+id/nowItemName"
            android:text="@string/supplyName"
            android:textSize="20sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toRightOf="@id/nowItemImg"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="20dp"/>

        <TextView
            android:id="@+id/nowItemAE"
            android:text="@string/Itemae"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            app:layout_constraintTop_toBottomOf="@+id/nowItemName"
            app:layout_constraintLeft_toRightOf="@+id/nowItemImg"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"/>

        <TextView
            android:id="@+id/nowItemPrice"
            android:text="@string/Itemprice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            app:layout_constraintTop_toBottomOf="@+id/nowItemAE"
            app:layout_constraintLeft_toRightOf="@+id/nowItemImg"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"/>

        <TextView
            android:id="@+id/nowItemDate"
            android:text="@string/SupplyDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            app:layout_constraintTop_toBottomOf="@+id/nowItemPrice"
            app:layout_constraintLeft_toRightOf="@+id/nowItemImg"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"/>



    </androidx.constraintlayout.widget.ConstraintLayout>



</androidx.constraintlayout.widget.ConstraintLayout>