<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:orientation="horizontal"
        android:padding="5dp">

        <LinearLayout
            android:layout_width="50dp"
            android:layout_height="100dp"
            android:layout_gravity="left"
            android:layout_weight="1">
            <ImageView
                android:id="@+id/followingItemImg"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:src="@drawable/nullitem"
                android:layout_margin="10dp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="180dp"
            android:layout_height="100dp"
            android:layout_weight="3"
            android:orientation="vertical">
            <TextView
                android:id="@+id/followingItemSupply"
                android:text="@string/supplyName"
                android:textSize="18sp"
                android:textStyle="bold"
                android:textColor="@color/darkGreen"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="10dp"/>

            <TextView
                android:id="@+id/followingItemIngre"
                android:text="@string/ingredient"
                android:textColor="@color/black"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="15sp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"/>

            <TextView
                android:id="@+id/followingItemAddre"
                android:text="@string/address"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="15sp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"/>

        </LinearLayout>

    </LinearLayout>

</LinearLayout>