<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:orientation="horizontal"
        android:padding="5dp">

        <LinearLayout
            android:layout_width="30dp"
            android:layout_height="70dp"
            android:layout_gravity="left"
            android:layout_weight="1">
            <ImageView
                android:id="@+id/likeItemImg"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:src="@drawable/nullitem"
                android:layout_margin="10dp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="180dp"
            android:layout_height="70dp"
            android:layout_weight="1"
            android:orientation="vertical">
            <TextView
                android:id="@+id/likeItemName"
                android:text="@string/ItemName"
                android:textSize="13sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_marginLeft="10dp"/>

            <TextView
                android:id="@+id/likeItemPrice"
                android:text="@string/Itemprice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="13sp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="5dp"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="50dp"
            android:layout_height="60dp"
            android:layout_weight="1">

            <TextView
                android:id="@+id/likeItemSupply"
                android:text="@string/supplyName"
                android:textSize="10sp"
                android:textColor="@color/darkGreen"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"/>
        </LinearLayout>
    </LinearLayout>

</LinearLayout>