<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:orientation="horizontal"
        android:padding="5dp">

        <LinearLayout
            android:layout_width="50dp"
            android:layout_height="80dp"
            android:layout_gravity="left"
            android:layout_weight="1">
            <ImageView
                android:id="@+id/now2ItemImg"
                android:layout_width="80dp"
                android:layout_height="70dp"
                android:src="@drawable/nullpro"
                android:layout_margin="10dp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="150dp"
            android:layout_height="80dp"
            android:layout_weight="1"
            android:orientation="vertical">
            <TextView
                android:id="@+id/now2ItemSupply"
                android:text="@string/supplyName"
                android:textSize="18sp"
                android:textStyle="bold"
                android:textColor="@color/darkGreen"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_marginLeft="10dp"/>

            <TextView
                android:id="@+id/now2ItemReqDate"
                android:text="@string/SupplyDate"
                android:textColor="@color/black"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"/>

        </LinearLayout>
        <LinearLayout
            android:layout_width="100dp"
            android:layout_height="80dp">
            <Button
                android:id="@+id/greenBtn"
                android:text="@string/greenBtn"
                android:textColor="@color/white"
                android:background="@color/lightGreen"
                android:layout_gravity="center"
                android:layout_width="80dp"
                android:layout_height="40dp"/>
        </LinearLayout>
    </LinearLayout>

</LinearLayout>